# agent-eval

./: .env.example  .gitignore  README.md  interview_assignment.md  pyproject.toml  pytest.ini
configs/: eval_config.yaml  npc_config.yaml
configs/scenarios/: basic_greeting.yaml  daily_chat.yaml  emotional_support.yaml  opinion_conflict.yaml  simple_qa.yaml
docs/: API.md  DESIGN.md
examples/: __init__.py  generate_sample_reports.py  run_eval.py  sample_report.json
examples/sample_reports/: sample_detailed_report.json  sample_report.html
src/: __init__.py
src/agents/: __init__.py  anthropic_agent.py  base.py  factory.py  mock_agent.py  openai_agent.py
src/evaluator/: __init__.py  base.py  simple_evaluator.py
src/graders/: __init__.py  base.py  factory.py  hybrid_grader.py  multi_judge_grader.py  natural_language_grader.py  rule_based_grader.py  score_converter.py
src/players/: __init__.py  base.py  factory.py  llm_player.py  role_player.py  simple_player.py
src/scenarios/: __init__.py
src/utils/: __init__.py  random_state.py
tests/: __init__.py  conftest.py  test_basic.py  test_e2e.py  test_imports.py  test_score_converter.py
